--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,8 @@
+@import "./Base/base.scss";
 @import "./utils/variables.scss";
-@import "./composants/mesdiv.scss";
+@import "./utils/mixin.scss";
+@import "./layout/header.scss";
+@import "./layout/localisation.scss";
+@import "./layout/fonctionnement.scss";
+@import "./layout/restaurant.scss";
+@import "./layout/footer.scss";
