--- a/sass/layout/fonctionnement.scss
+++ b/sass/layout/fonctionnement.scss
@@ -1,10 +1,22 @@
 .fonctionnement {
     width: 100%;
     @include link-without-layout;
-    margin-bottom: 2rem;
+    margin: 2rem 0;
+    display: flex;
+    column-gap: 2vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    @media (max-width: 620px) {
+        display: block;
+    }
     h2 {
+        width: 100%;
+        text-align: center;
         font-size: 1.5rem;
-        padding: 2rem 0.5rem 1rem;
+        padding: 1rem 0.5rem 1rem 1rem;
+        @media (max-width: 620px) {
+            text-align: left;
+        }
     }
     &__etapes {
         position: relative;
@@ -22,7 +34,7 @@
             padding: 2px 7px;
         }
         p {
-            padding: 20px 30px;
+            padding: 20px;
         }
         i {
             padding-right: 1rem;
