--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,12 +1,26 @@
 footer {
+    margin-top: 0;
     width: 100%;
     background-color: rgb(52, 51, 51);
     padding: 1rem;
     @include link-without-layout;
+    display: flex;
+    column-gap: 2vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    @media (max-width: 620px) {
+        display: block;
+    }
     h1 {
+        width: 100%;
         color: white;
         padding: 1rem 0;
         font-size: 1rem;
+        text-align: center;
+        @media (max-width: 620px) {
+            text-align: left;
+        }
     }
     p {
         color: white;
