--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -20,4 +20,5 @@
     background: linear-gradient(to bottom right, $secondary-color, $primary-color);
     box-shadow: 0px 5px 28px -10px black;
     margin: 1rem 0 3rem 0;
+    cursor: pointer;
 }
