--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,5 @@
 @import "./layout/localisation.scss";
 @import "./layout/fonctionnement.scss";
 @import "./layout/restaurant.scss";
+@import "./layout/menu.scss";
 @import "./layout/footer.scss";
