--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -8,10 +8,12 @@
     &--menu {
         width: 100%;
         display: flex;
+        align-items: center;
         i {
             display: block;
             margin-left: 2vw;
             margin-right: auto;
+            font-size: 2rem;
         }
         img {
             @include header-logo-layout;
