--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -22,7 +22,7 @@ footer {
             text-align: left;
         }
     }
-    p {
+    a {
         color: white;
         padding: 0.2rem 0;
         .fa-utensils {
