--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -18,7 +18,11 @@
     border: none;
     border-radius: 50px;
     background: linear-gradient(to bottom right, $secondary-color, $primary-color);
-    box-shadow: 0px 5px 28px -10px black;
+    box-shadow: 0px 5px 28px -8px black;
     margin: 1rem 0 3rem 0;
     cursor: pointer;
+    &:hover {
+        background: linear-gradient(to bottom right, lighten($color: $secondary-color, $amount: 4%), lighten($color: $primary-color, $amount: 4%));
+        box-shadow: 0 5px 20px -2px black;
+    }
 }
