--- a/sass/layout/menu.scss
+++ b/sass/layout/menu.scss
@@ -44,6 +44,9 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        &:hover {
+            opacity: 0;
+        }
     }
     &__part {
         @include link-without-layout;
@@ -51,6 +54,11 @@
         column-gap: 2vw;
         flex-wrap: wrap;
         justify-content: center;
+        @for $i from 1 to 10 {
+            .delay-#{$i} {
+                animation-delay: 150ms * $i;
+            }
+        }
         @media (max-width: 620px) {
             display: block;
         }
@@ -87,12 +95,74 @@
         background-color: white;
         border-radius: 15px;
         box-shadow: 0 0 10px grey;
-        padding: 1rem;
+        padding: 0;
         margin: 1rem;
-        &__details {
+        display: flex;
+        justify-content: flex-start;
+        overflow: hidden;
+        @keyframes card-apparition {
+            0% {
+                opacity: 0;
+                transform: translateY(2rem);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        animation: card-apparition 1000ms ease-in-out both;
+        &:hover .menu__vignette__check {
+            margin-right: 0;
+        }
+        &:hover .fa-check {
+            @keyframes check-rotate {
+                0% {
+                    transform: rotate(-270deg);
+                }
+                100% {
+                    transform: rotate(0deg);
+                }
+            }
+            animation: check-rotate 500ms ease-in-out 150ms;
+        }
+        &__description {
+            overflow: hidden;
+            padding: 0.5rem 1rem;
+            h3 {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+            p {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+        }
+        &__prix {
+            padding: 0.5rem;
             display: flex;
-            justify-content: space-between;
-            padding: 0.4rem 0 0 0;
+            justify-content: flex-end;
+            align-items: flex-end;
+            margin-left: auto;
+        }
+        &__check {
+            background-color: $ternary-color;
+            width: 3rem;
+            border-top-right-radius: 15px;
+            border-bottom-right-radius: 15px;
+            margin-right: -3rem;
+            display: flex;
+            justify-content: center;
+            transition: margin-right 500ms ease-in-out;
+            .fa-check {
+                background-color: white;
+                font-size: 0.8rem;
+                padding: 0.3rem;
+                border-radius: 50%;
+                color: $ternary-color;
+                margin: auto;
+            }
         }
     }
     &__button {
