--- a/sass/layout/restaurant.scss
+++ b/sass/layout/restaurant.scss
@@ -71,6 +71,9 @@
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
             }
+            &:hover {
+                opacity: 0;
+            }
         }
     }
 }
