--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./Base/base.scss";
 @import "./utils/variables.scss";
 @import "./utils/mixin.scss";
+@import "./layout/loader.scss";
 @import "./layout/header.scss";
 @import "./layout/localisation.scss";
 @import "./layout/fonctionnement.scss";
