--- a/css/style.css
+++ b/css/style.css
@@ -299,20 +299,21 @@
 }
 .menu h1 {
   padding: 1rem;
-  font-size: 2.5rem;
+  font-size: 8vw;
+  width: 85%;
 }
 .menu .fa-solid {
   display: none;
   position: absolute;
-  top: 25px;
-  right: 30px;
-  font-size: 2.5rem;
+  top: 22px;
+  right: 15px;
+  font-size: 8vw;
 }
 .menu .fa-regular {
   position: absolute;
-  top: 25px;
-  right: 30px;
-  font-size: 2.5rem;
+  top: 22px;
+  right: 15px;
+  font-size: 8vw;
 }
 .menu .fa-regular:hover + .fa-solid {
   display: block;
