--- a/css/style.css
+++ b/css/style.css
@@ -12,49 +12,73 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: white;
-  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: -1;
-  animation: loader-disapear 3s ease-in-out;
+  animation: loader-disapear 3s ease-in-out both;
+  background-color: rgb(227, 226, 226);
+  z-index: 2;
+}
+.loader__icone--visible {
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  border: solid 1px #9356dc;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader__icone--hidden {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: defilement 3s ease-in-out both;
+}
+.loader__icone--hidden .fa-solid {
+  display: inline;
+  color: #9356dc;
+  font-size: 6rem;
+  margin: 0;
+  padding: 0 4rem;
+}
+
+@keyframes defilement {
+  0% {
+    opacity: 1;
+    transform: translateX(-28rem);
+  }
+  25%, 30% {
+    opacity: 1;
+    transform: translateX(-14rem);
+  }
+  50%, 55% {
+    opacity: 1;
+    transform: translateX(0.3rem);
+  }
+  75%, 80% {
+    opacity: 1;
+    transform: translateX(14rem);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(30rem);
+  }
 }
 @keyframes loader-disapear {
   0% {
+    z-index: 2;
     opacity: 1;
-    z-index: 1;
   }
   99% {
-    opacity: 1;
-    z-index: 1;
-  }
-  100% {
-    opacity: 0;
-    z-index: 1;
-  }
-}
-.loader .fa-magnifying-glass,
-.loader .fa-fork {
-  font-size: 5rem;
-  color: lightblue;
-  z-index: 3;
-  animation: loader 3s ease-in-out both;
-}
-@keyframes loader {
-  0% {
-    opacity: 1;
-    transform: rotate(-1080deg);
-  }
-  99% {
+    z-index: 2;
     opacity: 1;
   }
   100% {
+    z-index: 0;
     opacity: 0;
-    transform: rotate(0deg);
   }
 }
-
 .header--accueil {
   width: 100%;
 }
@@ -104,8 +128,8 @@
   padding: 2rem 3rem 1rem 3rem;
 }
 .localisation__find-restaurant p {
-  color: grey;
   font-size: 1.2rem;
+  font-weight: 200;
   padding: 0 0.5rem 1rem 0.5rem;
 }
 .localisation__button {
@@ -249,13 +273,13 @@
   display: none;
   position: absolute;
   bottom: 15px;
-  right: 30px;
+  right: 20px;
   font-size: 1.5rem;
 }
 .restaurant__vignette .fa-regular {
   position: absolute;
   bottom: 15px;
-  right: 30px;
+  right: 20px;
   font-size: 1.5rem;
 }
 .restaurant__vignette .fa-regular:hover + .fa-solid {
@@ -288,7 +312,7 @@
   margin: auto;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  transform: translateY(-80px);
+  margin-top: -80px;
   background-color: rgb(238, 237, 237);
   position: relative;
 }
@@ -298,22 +322,25 @@
   }
 }
 .menu h1 {
+  position: relative;
   padding: 1rem;
-  font-size: 8vw;
-  width: 85%;
+  font-size: 4vw;
+  width: 100%;
 }
 .menu .fa-solid {
   display: none;
   position: absolute;
-  top: 22px;
-  right: 15px;
-  font-size: 8vw;
+  top: 50%;
+  right: 2vw;
+  font-size: 4vw;
+  transform: translateY(-50%);
 }
 .menu .fa-regular {
   position: absolute;
-  top: 22px;
-  right: 15px;
-  font-size: 8vw;
+  top: 50%;
+  right: 2vw;
+  font-size: 4vw;
+  transform: translateY(-50%);
 }
 .menu .fa-regular:hover + .fa-solid {
   display: block;
@@ -370,7 +397,7 @@
   }
 }
 .menu__part a {
-  width: 30%;
+  width: 40%;
 }
 .menu__part h2 {
   width: 100%;
