--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,7 +1,7 @@
 footer {
     margin-top: 0;
     width: 100%;
-    background-color: rgb(52, 51, 51);
+    background-color: $footer-color;
     padding: 1rem;
     @include link-without-layout;
     display: flex;
