--- a/sass/layout/loader.scss
+++ b/sass/layout/loader.scss
@@ -1,46 +1,74 @@
+
 .loader {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: white;
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: -1;
-    @keyframes loader-disapear {
-        0% {
-            opacity: 1;
-            z-index: 1;
-        }
-        99% {
-            opacity: 1;
-            z-index: 1;
-        }
-        100% {
-            opacity: 0;
-            z-index: 1;
+    animation: loader-disapear 3s ease-in-out both;
+    background-color: $localisation__ville-color;
+    z-index: 2;
+    &__icone--visible {
+        width: 15rem;
+        height: 15rem;
+        border-radius: 50%;
+        border: solid 1px $primary-color;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__icone--hidden {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        animation: defilement 3s ease-in-out both;
+        .fa-solid {
+            display: inline;
+            color: $primary-color;
+            font-size: 6rem;
+            margin: 0;
+            padding: 0 4rem;
         }
     }
-    .fa-magnifying-glass,
-    .fa-fork {
-        font-size: 5rem;
-        color: lightblue;
-        z-index: 3;
-        @keyframes loader {
-            0% {
-                opacity: 1;
-                transform: rotate(-1080deg);
-            }
-            99% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-                transform: rotate(0deg);
-            }
-        }
-        animation: loader 3s ease-in-out both;
+}
+
+@keyframes defilement {
+    0% {
+        opacity: 1;
+        transform: translateX(-28rem);
     }
-    animation: loader-disapear 3s ease-in-out;
+    25%,
+    30% {
+        opacity: 1;
+        transform: translateX(-14rem);
+    }
+    50%,
+    55% {
+        opacity: 1;
+        transform: translateX(0.3rem);
+    }
+    75%,
+    80% {
+        opacity: 1;
+        transform: translateX(14rem);
+    }
+    100% {
+        opacity: 0;
+        transform: translateX(30rem);
+    }
+}
+@keyframes loader-disapear {
+    0% {
+        z-index: 2;
+        opacity: 1;
+    }
+    99% {z-index: 2;
+        opacity: 1;
+    }
+    100% {
+        z-index: 0;
+        opacity: 0;
+    }
 }
