--- a/sass/layout/localisation.scss
+++ b/sass/layout/localisation.scss
@@ -1,10 +1,10 @@
 .localisation {
     width: 100%;
-    background-color: rgb(238, 237, 237);
+    background-color: $localisation-color;
     text-align: center;
     &__ville {
         box-shadow: inset 0px 5px 20px -18px black;
-        background-color: rgb(227, 226, 226);
+        background-color: $localisation__ville-color;
         i {
             padding: 1rem;
         }
@@ -16,8 +16,8 @@
             padding: 2rem 3rem 1rem 3rem;
         }
         p {
-            color: grey;
             font-size: 1.2rem;
+            font-weight: 200;
             padding: 0 0.5rem 1rem 0.5rem;
         }
     }
