--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -1,3 +1,6 @@
 $primary-color: #9356dc;
 $secondary-color: #ff79da;
 $ternary-color: #99e2d0;
+$footer-color:rgb(52, 51, 51);
+$localisation-color:rgb(238, 237, 237);
+$localisation__ville-color:rgb(227, 226, 226);
