--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -23,6 +23,7 @@ footer {
         }
     }
     a {
+        display:block;
         color: white;
         padding: 0.2rem 0;
         .fa-utensils {
