--- a/sass/layout/loader.scss
+++ b/sass/layout/loader.scss
@@ -6,9 +6,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: loader-disapear 3s ease-in-out both;
+    animation: loader-disapear 3s ease-in-out;
     background-color: $localisation__ville-color;
-    z-index: 2;
+    z-index: -1;
+    opacity: 0;
     &__icone--visible {
         width: 15rem;
         height: 15rem;
@@ -23,9 +24,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        animation: defilement 3s ease-in-out both;
+        animation: loader-scroll 3s ease-in-out both;
         .fa-solid {
-            display: inline;
             color: $primary-color;
             font-size: 6rem;
             margin: 0;
@@ -34,41 +34,3 @@
     }
 }
 
-@keyframes defilement {
-    0% {
-        opacity: 1;
-        transform: translateX(-28rem);
-    }
-    25%,
-    30% {
-        opacity: 1;
-        transform: translateX(-14rem);
-    }
-    50%,
-    55% {
-        opacity: 1;
-        transform: translateX(0.3rem);
-    }
-    75%,
-    80% {
-        opacity: 1;
-        transform: translateX(14rem);
-    }
-    100% {
-        opacity: 0;
-        transform: translateX(30rem);
-    }
-}
-@keyframes loader-disapear {
-    0% {
-        z-index: 2;
-        opacity: 1;
-    }
-    99% {z-index: 2;
-        opacity: 1;
-    }
-    100% {
-        z-index: 0;
-        opacity: 0;
-    }
-}
