--- a/sass/layout/menu.scss
+++ b/sass/layout/menu.scss
@@ -1,16 +1,9 @@
-.photo-restaurant {
-    display: block;
-    width: 80%;
-    height: 400px;
-    object-fit: cover;
-    object-position: center;
-    margin: auto;
-    @media (max-width: 620px) {
-        width: 100%;
-        height: 300px;
-    }
-}
-
+/*This files gather 
+- layout, 
+- H1, 
+- heart
+- button 
+for the layout of the menu for each restaurant*/
 .menu {
     width: 80%;
     margin: auto;
@@ -23,152 +16,14 @@
         width: 100%;
     }
     h1 {
-        position: relative;
         padding: 1rem;
         font-size: 4vw;
         width: 100%;
-    }
-    .fa-solid {
-        display: none;
-        position: absolute;
-        top: 50%;
-        right: 2vw;
-        font-size: 4vw;
-        transform: translateY(-50%);
-    }
-    .fa-regular {
-        position: absolute;
-        top:50%;
-        right: 2vw;
-        font-size: 4vw;
-        transform: translateY(-50%);
-        &:hover + .fa-solid {
-            display: block;
-            background: -webkit-linear-gradient($primary-color, $secondary-color);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        &:hover {
-            opacity: 0;
-        }
-    }
-    &__part {
-        @include link-without-layout;
-        display: flex;
-        column-gap: 2vw;
-        flex-wrap: wrap;
-        justify-content: center;
-        @for $i from 1 to 11 {
-            .delay-#{$i} {
-                animation-delay: 150ms * $i;
-            }
-        }
         @media (max-width: 620px) {
-            display: block;
-        }
-        a {
-            width: 40%;
-        }
-        h2 {
-            width: 100%;
-            text-align: center;
-            font-weight: normal;
-            font-size: 1.3rem;
-            position: relative;
-            padding: 0.5rem 1rem;
-            @media (max-width: 620px) {
-                text-align: left;
-            }
-            &::after {
-                content: "";
-                width: 10%;
-                height: 3px;
-                background: $ternary-color;
-                position: absolute;
-                bottom: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                @media (max-width: 620px) {
-                    left: 1rem;
-                    transform: translateX(0);
-                }
-            }
+            font-size: 1.5rem;
         }
     }
-    &__vignette {
-        background-color: white;
-        border-radius: 15px;
-        box-shadow: 0 0 10px grey;
-        padding: 0;
-        margin: 1rem;
-        display: flex;
-        justify-content: flex-start;
-        overflow: hidden;
-        @keyframes card-apparition {
-            0% {
-                opacity: 0;
-                transform: translateY(2rem);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-        animation: card-apparition 1000ms ease-in-out both;
-        &:hover .menu__vignette__check {
-            margin-right: 0;
-        }
-        &:hover .fa-check {
-            @keyframes check-rotate {
-                0% {
-                    transform: rotate(-270deg);
-                }
-                100% {
-                    transform: rotate(0deg);
-                }
-            }
-            animation: check-rotate 500ms ease-in-out 150ms;
-        }
-        &__description {
-            overflow: hidden;
-            padding: 0.5rem 1rem;
-            h3 {
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-            }
-            p {
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-            }
-        }
-        &__prix {
-            padding: 0.5rem;
-            display: flex;
-            justify-content: flex-end;
-            align-items: flex-end;
-            margin-left: auto;
-        }
-        &__check {
-            background-color: $ternary-color;
-            width: 3rem;
-            border-top-right-radius: 15px;
-            border-bottom-right-radius: 15px;
-            margin-right: -3rem;
-            display: flex;
-            justify-content: center;
-            transition: margin-right 500ms ease-in-out;
-            .fa-check {
-                background-color: white;
-                font-size: 0.8rem;
-                padding: 0.3rem;
-                border-radius: 50%;
-                color: $ternary-color;
-                margin: auto;
-            }
-        }
-    }
+    @include heart-placement(4vw);
     &__button {
         width: 100%;
         text-align: center;
