--- a/sass/layout/restaurant.scss
+++ b/sass/layout/restaurant.scss
@@ -26,25 +26,12 @@
         }
     }
     &__vignette {
-        position: relative;
         margin: 0 1rem 2rem 1rem;
         border-radius: 15px;
         box-shadow: 0 0 10px grey;
-        img {
-            width: 100%;
-            height: 180px;
-            object-fit: cover;
-            object-position: center;
-            border-top-left-radius: 15px;
-            border-top-right-radius: 15px;
-        }
-        h3 {
-            padding: 0.4rem 0 0.3rem 0.7rem;
-        }
-        p {
-            padding: 0 0 0.5rem 0.7rem;
-        }
+        position: relative;
         span {
+            /*Allow to put a "new" pop-up on the restaurant card, need to add <span>Nouveau</span> just below the image in HTML*/
             padding: 2px 4px;
             position: absolute;
             top: 10px;
@@ -53,27 +40,23 @@
             background-color: $ternary-color;
             border-radius: 5px;
         }
-        .fa-solid {
-            display: none;
-            position: absolute;
-            bottom: 15px;
-            right: 20px;
-            font-size: 1.5rem;
+        img {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            object-position: center;
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
         }
-        .fa-regular {
-            position: absolute;
-            bottom: 15px;
-            right: 20px;
-            font-size: 1.5rem;
-            &:hover + .fa-solid {
-                display: block;
-                background: -webkit-linear-gradient($primary-color, $secondary-color);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
+        &__details {
+            position: relative;
+            h3 {
+                padding: 0.4rem 0 0.3rem 0.7rem;
             }
-            &:hover {
-                opacity: 0;
+            p {
+                padding: 0 0 0.5rem 0.7rem;
             }
+            @include heart-placement;
         }
     }
 }
