--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -1,3 +1,4 @@
+/*mixin to put link as normal text*/
 @mixin link-without-layout() {
     a {
         color: black;
@@ -5,6 +6,7 @@
     }
 }
 
+/*Mixin for the disposition of logo in the header*/
 @mixin header-logo-layout() {
     display: block;
     width: 200px;
@@ -12,6 +14,7 @@
     padding: 1rem;
 }
 
+/*Mixin for the layout of the main button*/
 @mixin button() {
     color: white;
     padding: 15px 30px;
@@ -24,5 +27,61 @@
     &:hover {
         background: linear-gradient(to bottom right, lighten($color: $secondary-color, $amount: 4%), lighten($color: $primary-color, $amount: 4%));
         box-shadow: 0 5px 20px -2px black;
+    }
+}
+
+/*Mixin to put an ellipsis at the end of the text in the meal card when their is not enought space*/
+@mixin hide-text() {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/*Mixin related to the position of the 2 hearts on card restaurant on the main page and also on the menu page
+Solid one is hidden until user hover or active the regular one */
+@mixin heart-placement($fontsize-destktop: 1.5rem, $fontsize-mobile: 1.5rem) {
+    h1 {
+        position: relative;
+    }
+    .fa-solid {
+        display: none;
+        position: absolute;
+        top: 50%;
+        right: 30px;
+        transform: translateY(-50%);
+        font-size: $fontsize-destktop;
+        @media (max-width: 620px) {
+            font-size: $fontsize-mobile;
+        }
+    }
+    .fa-regular {
+        position: absolute;
+        top: 50%;
+        right: 30px;
+        transform: translateY(-50%);
+        font-size: $fontsize-destktop;
+        &:hover + .fa-solid {
+            /*Hover on regular heart that make the solid appears. Solide one is colored with a gradient of primary and secondary color*/
+            display: block;
+            background: -webkit-linear-gradient($primary-color, $secondary-color);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        &:hover {
+            /*to make regular heart disapear*/
+            opacity: 0;
+        }
+        @media (max-width: 620px) {
+            font-size: $fontsize-mobile;
+            &:active + .fa-solid {
+                display: block;
+                background: -webkit-linear-gradient($primary-color, $secondary-color);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+            &:active {
+                opacity: 0;
+            }
+        }
     }
 }
