--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -44,12 +44,13 @@ Solid one is hidden until user hover or active the regular one */
         position: relative;
     }
     .fa-solid {
-        display: none;
+        opacity: 0;
         position: absolute;
         top: 50%;
         right: 30px;
         transform: translateY(-50%);
         font-size: $fontsize-destktop;
+        z-index: 0;
         @media (max-width: 620px) {
             font-size: $fontsize-mobile;
         }
@@ -60,9 +61,11 @@ Solid one is hidden until user hover or active the regular one */
         right: 30px;
         transform: translateY(-50%);
         font-size: $fontsize-destktop;
+        z-index: 1;
         &:hover + .fa-solid {
             /*Hover on regular heart that make the solid appears. Solide one is colored with a gradient of primary and secondary color*/
-            display: block;
+            opacity: 1;
+            transition: opacity 500ms;
             background: -webkit-linear-gradient($primary-color, $secondary-color);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -70,6 +73,7 @@ Solid one is hidden until user hover or active the regular one */
         &:hover {
             /*to make regular heart disapear*/
             opacity: 0;
+            transition: opacity 500ms;
         }
         @media (max-width: 620px) {
             font-size: $fontsize-mobile;
